module(
    name = "copybara",
    version = "0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_java", version = "7.5.0")
bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_python", version = "0.31.0")

non_module_deps = use_extension("//:repositories.bzl", "non_module_deps")
use_repo(non_module_deps, "io_bazel")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "copybara_maven",
    artifacts = [
        "com.github.stephenc.jcip:jcip-annotations:1.0-1",
        "com.google.auto.service:auto-service-annotations:1.1.1",
        "com.google.auto.service:auto-service:1.1.1",
        "com.google.auto.value:auto-value-annotations:1.10.2",
        "com.google.auto.value:auto-value:1.10.2",
        "com.google.auto:auto-common:1.2.2",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.10.1",
        "com.google.errorprone:error_prone_type_annotations:2.20.0",
        "com.google.flogger:flogger-system-backend:0.7.4",
        "com.google.flogger:flogger:0.7.4",
        "com.google.flogger:google-extensions:0.7.4",
        "com.google.guava:failureaccess:1.0.1",
        "com.google.guava:guava-testlib:33.0.0-jre",
        "com.google.guava:guava:33.0.0-jre",
        "com.google.http-client:google-http-client-gson:1.43.3",
        "com.google.http-client:google-http-client-test:1.43.3",
        "com.google.http-client:google-http-client:1.43.3",
        "com.google.jimfs:jimfs:1.2",
        "com.google.re2j:re2j:1.7",
        "com.google.testparameterinjector:test-parameter-injector:1.8",
        "com.google.truth.extensions:truth-java8-extension:1.3.0",
        "com.google.truth:truth:1.3.0",
        "com.googlecode.java-diff-utils:diffutils:1.3.0",
        "org.jcommander:jcommander:2.0",
        "com.ryanharter.auto.value:auto-value-gson-extension:1.3.1",
        "com.ryanharter.auto.value:auto-value-gson-factory:1.3.1",
        "com.ryanharter.auto.value:auto-value-gson-runtime:1.3.1",
        "com.sun.mail:javax.mail:1.5.6",
        "commons-codec:commons-codec:1.16.0",
        "junit:junit:4.13.2",
        "net.bytebuddy:byte-buddy-agent:1.14.5",
        "net.bytebuddy:byte-buddy:1.14.5",
        "org.apache.commons:commons-compress:1.25.0",
        "org.apache.tomcat:tomcat-annotations-api:8.0.5",
        "org.apache.velocity:velocity:1.7",
        "org.jsoup:jsoup:1.16.1",
        "org.mockito:mockito-core:4.5.1",
        "org.objenesis:objenesis:1.0",
        "org.tomlj:tomlj:1.1.1",
    ],
    fail_if_repin_required = True,
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
)
use_repo(maven, "copybara_maven")
